Bug 378854 - Konversation crashes randomly
Summary: Konversation crashes randomly
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.7.2
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
: 382911 387170 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-17 02:16 UTC by Kishore Gopalakrishnan
Modified: 2017-11-29 19:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace for konversation crash (2.55 KB, text/plain)
2017-04-17 02:16 UTC, Kishore Gopalakrishnan
Details
Backtrace for 1.7.2. (3.95 KB, text/plain)
2017-05-11 00:24 UTC, Kishore Gopalakrishnan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2017-04-17 02:16:33 UTC
Created attachment 105053 [details]
Backtrace for konversation crash

Konversation crashes without any immediately obvious action to trigger it (i.e., even if I leave it running in the background). This issue happens only in 1.7. Downgrading to 1.6.2 fixes the issue. I have attached the backtrace.
Comment 1 Kishore Gopalakrishnan 2017-05-11 00:24:43 UTC
Created attachment 105437 [details]
Backtrace for 1.7.2.

Crash also occurs in 1.7.2. Backtrace with debug symbols attached.
Comment 2 Christoph Feck 2017-06-02 17:40:06 UTC
Relevant part of the backtrace:

#3  QMessageLogger::fatal (this=this@entry=0x7fffffffc870, msg=msg@entry=0x7ffff1823b98 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qlogging.cpp:796
#4  0x00007ffff15814b1 in qt_assert_x (where=where@entry=0x65273c "QList<T>::operator[]", what=what@entry=0x652729 "index out of range", 
    file=file@entry=0x6526c8 "/usr/include/qt/QtCore/qlist.h", line=line@entry=548) at global/qglobal.cpp:3078
#5  0x0000000000486388 in QList<QString>::operator[] (this=<optimized out>, i=1) at /usr/include/qt/QtCore/qlist.h:548
#6  0x000000000051bd5a in InputFilter::parseClientCommand (this=this@entry=0x1273ec0, prefix=..., command=..., parameterList=..., messageTags=...)
    at /home/kishore/build/konversation/src/konversation-1.7.2/src/irc/inputfilter.cpp:584
#7  0x000000000052747f in InputFilter::parseLine (this=this@entry=0x1273ec0, line=...)
    at /home/kishore/build/konversation/src/konversation-1.7.2/src/irc/inputfilter.cpp:127
#8  0x00000000004d769b in Server::processIncomingData (this=0x1273db0) at /home/kishore/build/konversation/src/konversation-1.7.2/src/irc/server.cpp:1341
#9  0x0000000000645fa5 in Server::qt_static_metacall (_o=0x1273db0, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>)
    at /home/kishore/build/konversation/src/build/src/konversation_autogen/V7AFER6LXI/moc_server.cpp:751
#10 0x00007ffff17a5de9 in QMetaObject::activate (sender=sender@entry=0x1273e18, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, 
    argv=argv@entry=0x0) at kernel/qobject.cpp:3740
#11 0x00007ffff17a6707 in QMetaObject::activate (sender=sender@entry=0x1273e18, m=m@entry=0x7ffff1bc7780 <QTimer::staticMetaObject>, 
    local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3602
#12 0x00007ffff1820380 in QTimer::timeout (this=this@entry=0x1273e18) at .moc/moc_qtimer.cpp:200
#13 0x00007ffff17b2e38 in QTimer::timerEvent (this=0x1273e18, e=<optimized out>) at kernel/qtimer.cpp:254
#14 0x00007ffff17a6c03 in QObject::event (this=0x1273e18, e=<optimized out>) at kernel/qobject.cpp:1285
Comment 3 Peter Simonsson 2017-06-10 18:45:02 UTC
Git commit 783dc0f595ecf90e37225a57da0ffa2c030a470d by Peter Simonsson.
Committed on 10/06/2017 at 18:41.
Pushed by psn into branch '1.7'.

Fix crash in join handling in inputfilter

Make sure to check size of parameter list for extended join.

M  +6    -13   src/irc/inputfilter.cpp

https://commits.kde.org/konversation/783dc0f595ecf90e37225a57da0ffa2c030a470d
Comment 4 Kai Wb. 2017-07-17 10:48:02 UTC
Any chance for a soonish release containing this fix? Without it, Konversation is almost unusable for me. Thanks for considering.
Comment 5 Christoph Feck 2017-08-02 15:59:51 UTC
*** Bug 382911 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2017-11-29 19:46:40 UTC
*** Bug 387170 has been marked as a duplicate of this bug. ***