Fix crash in join handling in inputfilter

Make sure to check size of parameter list for extended join.

BUG:378854